scripts/nullness/annotator/urlaa914a1de2_xu_hao_erilex_tgz-pJ8-erilex_esl_ESLJ8.txt
../annotator/urlaa914a1de2_xu_hao_erilex_tgz-pJ8-erilex_esl_ESLJ8/src/erilex/esl/SupportCodeGenerator.java:43: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlaa914a1de2_xu_hao_erilex_tgz-pJ8-erilex_esl_ESLJ8/src/erilex/esl/SupportCodeGenerator.java:109: error: cannot find symbol
    @Initializer public void setStartTypeAndEnv(String st, String se) {
     ^
  symbol:   class Initializer
  location: class SupportCodeGenerator
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
